scenarios/06-extensions/https-ext-auth-http/00-backend-a-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend-a
  labels:
    app.kubernetes.io/part-of: demo
